# openhaystack-zephyr

./: README.rst  openhaypatch.sh  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  debug-usb-uart.conf  prj.conf
app/src/: debug.c  debug.h  main.c
modules/openhaystack/: CMakeLists.txt  Kconfig.openhaystack
modules/openhaystack/src/: openhaystack.c  openhaystack.h
modules/openhaystack/zephyr/: module.yml
